package bibliotecavirtual.Interfaces;

public interface Exibir {
    void exibirInformações();
    
}
